# Potential

./: INSTALL  Potential.hs  README  TestArray.hs  TestCode.hs  TestIntGate.hs  TestMemory.hs  TestStruct.hs  tests.sh
Ctests/Add/: Add2.hs  TestAdd.hs
Ctests/Factorial/: DoFactorial.hs  TEST  factorial.c
Ctests/IntGate/: ChangeDpl.hs  ChangeDpl2.hs  testIntGate.c
Ctests/add/: TestAdd.hs  adder.c
Language/: Potential.cabal  Potential.hs
Language/Potential/: Array.hs  Assembly.hs  Bit.hs  Constraints.hs  Core.hs  DataStructure.hs  Flow.hs  Functions.hs  Integer.hs  IxMonad.hs  Label.hs  Mov.hs  Pointer.hs  Printing.hs  Size.hs  Stack.hs  THLiftDecls.hs
Language/Potential/Arch/: Builder.hs  CommonQQ.hs  ParseType.hs  SetGet.hs
Language/Potential/Arch/Amd64/: Model.hs
Language/Potential/Arch/Amd64/Machine/: Flags.hs  IDT.hs  IntGate.hs
Language/Potential/Array/: AbstractSyntax.hs  ArrayQQ.hs  CodeGenerator.hs  CommonQQ.hs
Language/Potential/DataStructure/: AbstractSyntax.hs  CodeGenerator.hs  CommonParser.hs  CommonQQ.hs  FieldRelation.hs  PartialRelation.hs  StructDiagramQQ.hs  StructQQ.hs
Language/Potential/IxMonad/: Constrained.hs  IxMonad.hs  PState.hs  Reader.hs  Region.hs  State.hs  Writer.hs
PC/: Base.hs  Compiler.hs  Config.hs  Main.hs  PC.cabal  Source.hs
Potential/: Array-old.hs  Array.hs  Assembly.hs  Bit.hs  BuildArray.hs  BuildDataStructures.hs  Constraints.hs  Core.hs  DataStructure.hs  DataStructures-old.hs  DataStructures.hs  Flow.hs  Functions.hs  Handles.hs  Integer.hs  IxCode.hs  IxMonad.hs  Label.hs  MachineState.hs  MachineStateBuilder.hs  Mov.hs  PMonad.hs  PMonadc.hs  Pointer.hs  PrimTypes.hs  Primitives.hs  Printing.hs  Region.hs  Size.hs  Stack.hs  THLiftDecls.hs
Potential/Arch/: Builder.hs  CommonQQ.hs  ParseType.hs  SetGet.hs
Potential/Arch/Amd64/: Model.hs  State.hs
Potential/Arch/Amd64/Machine/: Flags.hs  IDT.hs  IntGate.hs
Potential/Array/: AbstractSyntax.hs  ArrayQQ.hs  CodeGenerator.hs  CommonQQ.hs
Potential/DataStructure/: AbstractSyntax.hs  CodeGenerator.hs  CommonParser.hs  CommonQQ.hs  FieldRelation.hs  LiftDecls.hs  PartialRelation.hs  StructDiagramQQ.hs  StructQQ.hs
Potential/IxMonad/: Constrained.hs  IxMonad.hs  PState.hs  Reader.hs  Region.hs  State.hs  Writer.hs
Potential/Machine/: Flags.hs  FlagsStruct.hs  IDT.hs  IntGate.hs  IntGateStruct.hs
Potential/Monad/: WriterT.hs
Tests/: Amd64QQ.hs  Multiboot.hs  TestArray.hs  TestCode.hs  TestFailure.hs  TestIntGate.hs  TestStruct.hs
Tests/C/Add/: Add2.hs
Tests/C/Factorial/: DoFactorial.hs
Tests/C/IntGate/: ChangeDpl2.hs  TEST  testIntGate.c
compiler/: Main.hs  PC.cabal
compiler/PC/: Base.hs  Compiler.hs  Config.hs  Source.hs
libpotential/: Potential.cabal
libpotential/Language/: Potential.hs
libpotential/Language/Potential/: Assembly.hs  Bit.hs  Constraints.hs  Core.hs  DataStructure.hs  Flow.hs  Functions.hs  Integer.hs  IxMonad.hs  Label.hs  Pointer.hs  Printing.hs  Size.hs  Stack.hs
libpotential/Language/Potential/Arch/: Builder.hs  CommonQQ.hs
libpotential/Language/Potential/Arch/Amd64/: Model.hs
libpotential/Language/Potential/Arch/Amd64/Machine/: Flags.hs  IntGate.hs
libpotential/Language/Potential/Array/: CommonQQ.hs
libpotential/Language/Potential/DataStructure/: AbstractSyntax.hs  CodeGenerator.hs  CommonParser.hs  FieldRelation.hs  MetaData.hs  PartialRelation.hs  StructDiagramQQ.hs  StructQQ.hs
libpotential/Language/Potential/GRUB/: Multiboot.hs
libpotential/Language/Potential/IxMonad/: Constrained.hs  IxMonad.hs  PState.hs  Reader.hs  Region.hs  State.hs
