Name:		potential
Version:	0.1
Cabal-Version:  >= 1.8
License:	LGPL 3
License-File:	COPYING.LESSER
Copyright:	(c) 2010 Timothy Carstens
Author:		Tim Carstens
Maintainer:	carstens@math.utah.edu
Stability:	experimental
Homepage:	http://potential-lang.org/
Category:	Language
Synopsis:	A type safe systems programming language

Library
  Build-Depends:
	base >= 4.2,
	th-lift == 0.3
  Exposed-modules:
    Language.Potential
  Compiler: GHC >= 6.12
  Extensions:
	DeriveDataTypeable
	EmptyDataDecls,
	ExistentialQuantification,
	FlexibleContexts,
	FlexibleInstances,
	FunctionalDependencies,
	GADTs,
	MultiParamTypeClasses,
	NoImplicitPrelude,
	NoMonomorphismRestriction,
	UndecidableInstances,
	QuasiQuotes,
	Rank2Types,
	ScopedTypeVariables,
	TemplateHaskell,
	TypeFamilies,
	TypeOperators,
	TypeSynonymInstances,
  ghc-options: context-stack=160

source-repository head
  type:		git
  location:	git://github.com/intoverflow/potential.git

