Name:           potential
Version:        0.1
Cabal-Version:  >= 1.8
License:        LGPL-3
License-File:   COPYING.LESSER
Copyright:      (c) 2010 Timothy Carstens
Author:         Tim Carstens
Maintainer:     carstens@math.utah.edu
Stability:      experimental
Homepage:       http://potential-lang.org/
Category:       Language
Synopsis:       A type safe systems programming language
Build-type:     Simple
Tested-with:    GHC >=6.12

Library
  Build-Depends:
        base >= 4.2,
        th-lift == 0.3,
        template-haskell >= 2.4,
        syb >= 0.1,
        parsec >= 2.1
  Exposed-modules:
        Language.Potential
  Extensions:
        DeriveDataTypeable,
        EmptyDataDecls,
        ExistentialQuantification,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        MultiParamTypeClasses,
        NoImplicitPrelude,
        NoMonomorphismRestriction,
        UndecidableInstances,
        QuasiQuotes,
        Rank2Types,
        ScopedTypeVariables,
        TemplateHaskell,
        TypeFamilies,
        TypeOperators,
        TypeSynonymInstances
  ghc-options: -fcontext-stack=160

source-repository head
  type:         git
  location:     git://github.com/intoverflow/potential.git

