Name:           potential
Version:        0.1
Cabal-Version:  >= 1.8
License:        LGPL-3
License-File:   COPYING.LESSER
Copyright:      (c) 2010 Timothy Carstens
Author:         Tim Carstens
Maintainer:     carstens@math.utah.edu
Stability:      experimental
Homepage:       http://potential-lang.org/
Category:       Language
Synopsis:       A type safe systems programming language
Build-type:     Simple
Tested-with:    GHC >=6.12

Library
  Build-Depends:
        base >= 4.2,
        th-lift == 0.3,
        template-haskell >= 2.4,
        syb >= 0.1,
        parsec >= 2.1
  Exposed-modules:
        Language.Potential,
        Language.Potential.Printing,
        Language.Potential.Assembly
        Language.Potential.Size,
        Language.Potential.Arch.Amd64.Model,
        Language.Potential.Arch.Amd64.Machine.Flags,
        Language.Potential.Arch.Amd64.Machine.IDT,
        Language.Potential.Arch.Amd64.Machine.IntGate
  Other-modules:
        Language.Potential.Bit,
        Language.Potential.Constraints,
        Language.Potential.Core,
        Language.Potential.DataStructure,
        Language.Potential.Flow,
        Language.Potential.Functions,
        Language.Potential.Integer,
        Language.Potential.Label,
        Language.Potential.Mov,
        Language.Potential.Pointer,
        Language.Potential.Stack,
        Language.Potential.THLiftDecls,
        Language.Potential.IxMonad,
        Language.Potential.IxMonad.Constrained,
        Language.Potential.IxMonad.IxMonad,
        Language.Potential.IxMonad.Reader,
        Language.Potential.IxMonad.Region,
        Language.Potential.IxMonad.PState,
        Language.Potential.IxMonad.State,
        Language.Potential.IxMonad.Writer,
        Language.Potential.Arch.Builder,
        Language.Potential.Arch.CommonQQ,
        Language.Potential.Arch.ParseType,
        Language.Potential.Arch.SetGet,
        Language.Potential.Array.AbstractSyntax,
        Language.Potential.Array.ArrayQQ,
        Language.Potential.Array.CodeGenerator,
        Language.Potential.Array.CommonQQ,
        Language.Potential.DataStructure.AbstractSyntax,
        Language.Potential.DataStructure.CodeGenerator,
        Language.Potential.DataStructure.CommonParser,
        Language.Potential.DataStructure.CommonQQ,
        Language.Potential.DataStructure.FieldRelation,
        Language.Potential.DataStructure.PartialRelation,
        Language.Potential.DataStructure.StructDiagramQQ,
        Language.Potential.DataStructure.StructQQ
  Extensions:
        DeriveDataTypeable,
        EmptyDataDecls,
        ExistentialQuantification,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        MultiParamTypeClasses,
        NoImplicitPrelude,
        NoMonomorphismRestriction,
        UndecidableInstances,
        QuasiQuotes,
        Rank2Types,
        ScopedTypeVariables,
        TemplateHaskell,
        TypeFamilies,
        TypeOperators,
        TypeSynonymInstances
  ghc-options: -fcontext-stack=160

source-repository head
  type:         git
  location:     git://github.com/intoverflow/potential.git

